# weather_bot

./: README.md  init.sql  pyproject.toml
project/: __init__.py
project/scripts/: __init__.py  weather_bot.py
