[tool.poetry]
name = "weather_bot"
version = "0.1.0"
description = ""
authors = ["EgorGod21 <EgorGod21@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"
pytz = "^2023.3"
telebot = "^0.0.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
